--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "request": "^2.88.2"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
